Fix manage page nav header align self end style (Chrome)

--- a/manage/templates/sass/index.scss
+++ b/manage/templates/sass/index.scss
@@ -29,7 +29,7 @@ h3 {
     list-style: none;
     flex-direction: row;
     display: flex;
-    align-self: end;
+    align-self: flex-end;
     padding: 0 10px;
     font-size: 20px;
 }
